// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditCycleTimeSeries/> renders the chart correctly 1`] = `
<div>
  <button
    className="btn btn-default pull-right"
    onClick={[Function]}
    title="Download"
  >
    Download 
    <span
      className="glyphicon glyphicon-download"
    />
  </button>
  <button
    className="btn btn-default pull-right"
    onClick={[Function]}
    title="View Data"
  >
    <span
      className="glyphicon glyphicon-th-list"
    />
  </button>
  <div
    className="btn-group pull-right"
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <span
        className="glyphicon glyphicon-menu-down"
      />
    </button>
  </div>
  <h3
    className="text-center"
  >
    Audit Cycle Summary
  </h3>
  <div
    className="recharts-responsive-container"
    id="audit_cycle_summary"
    style={
      Object {
        "height": "100%",
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`<AuditCycleTimeSeries/> renders the data popup correctly when the button is clicked 1`] = `
<div>
  <button
    className="btn btn-default pull-right"
    onClick={[Function]}
    title="Download"
  >
    Download 
    <span
      className="glyphicon glyphicon-download"
    />
  </button>
  <button
    className="btn btn-default pull-right"
    onClick={[Function]}
    title="View Data"
  >
    <span
      className="glyphicon glyphicon-th-list"
    />
  </button>
  <div
    className="btn-group pull-right"
  >
    <button
      className="btn btn-default"
      onClick={[Function]}
      type="button"
    >
      <span
        className="glyphicon glyphicon-menu-down"
      />
    </button>
  </div>
  <h3
    className="text-center"
  >
    Audit Cycle Summary
  </h3>
  <div
    className="recharts-responsive-container"
    id="audit_cycle_summary"
    style={
      Object {
        "height": "100%",
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
  <div
    className="modal"
    style={
      Object {
        "display": "block",
        "overflow": "scroll",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-backdrop fade in"
      onClick={[Function]}
      style={
        Object {
          "height": "100%",
          "zIndex": "1060",
        }
      }
    />
    <div
      className="modal-dialog "
      style={
        Object {
          "zIndex": "1070",
        }
      }
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            className="close"
            onClick={[Function]}
            type="button"
          >
            ×
          </button>
          <h4
            className="modal-title"
          >
            Section Improvement over time
          </h4>
        </div>
        <div
          className="modal-body"
          style={
            Object {
              "maxHeight": "85vh",
              "overflowY": "scroll",
            }
          }
        >
          <table
            className="table table-striped "
          >
            <thead>
              <tr>
                <th>
                  Section
                </th>
                <th
                  className="text-right"
                >
                  January 2017
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  Entrance
                </td>
                <td
                  className="text-right"
                  style={
                    Object {
                      "backgroundColor": "#CD5C5C",
                    }
                  }
                >
                  36
                  %
                </td>
              </tr>
              <tr>
                <td>
                  Need Analysis
                </td>
                <td
                  className="text-right"
                  style={
                    Object {
                      "backgroundColor": "#CD5C5C",
                    }
                  }
                >
                  32
                  %
                </td>
              </tr>
              <tr>
                <td>
                  Staff Analysis
                </td>
                <td
                  className="text-right"
                  style={
                    Object {
                      "backgroundColor": "#CD5C5C",
                    }
                  }
                >
                  47
                  %
                </td>
              </tr>
              <tr>
                <td>
                  Selling and Recommendation skills
                </td>
                <td
                  className="text-right"
                  style={
                    Object {
                      "backgroundColor": "#CD5C5C",
                    }
                  }
                >
                  30
                  %
                </td>
              </tr>
              <tr>
                <td>
                  Outlet analysis
                </td>
                <td
                  className="text-right"
                  style={
                    Object {
                      "backgroundColor": "#FF7F50",
                    }
                  }
                >
                  61
                  %
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
